<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">No Text While Driving</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_set_message">Set Message</string>
    <string name="title_activity_view_message">View Messages</string>
    <string name="title_activity_send_message">Send A Message</string>
    <string name="title_activity_missed_messages">Missed Messages</string>

    <!-- Home Activity -->
    <string name="sendAMessageButton">Send Message</string>
    <string name="setAMessageButton">Set Message</string>
    <string name="viewCurrentMessagesButton">Custom Message</string>
    <string name="activateSwitch">Activate</string>
    <string name="viewMissedMessages">Missed Messages</string>
    <string name="exit">Exit</string>

    <!-- Set A Message Activity -->
    <string name="enterOwnMessage">Enter your message</string>
    <string name="useDefaultMessage">Or use a predefined message</string>
    <string name="setMessageButton">Set</string>

    <!-- Send A Message Activity -->
    <string name="enterPhoneNumber">Enter phone number</string>
    <string name="sendYourMessage">Send</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>

    <!-- Missed Message Activity -->
    <string name="clearList">Clear</string>
    <string name="confirmation"> OK</string>

    <!-- View Set Message -->
    <string name="customMessage"> Your Custom Message</string>

    <!-- List Of Default Messages -->
    <string-array name="default_messages_array">
        <item></item>
        <item>I am driving, please call later</item>
        <item>At movies, please call later</item>
        <item>Im sleeping,please call later</item>
        <item>In a meeting, please call later</item>
        <item>In class, call later</item>
    </string-array>

</resources>